<resources>
    <string name="app_name">Chat Dev-Intensive 2019</string>
    <string name="profile_hint_repository">Репозиторий</string>
    <string name="profile_hint_about">О себе</string>
    <string name="profile_hint_last_name">Фамилия</string>
    <string name="profile_hint_first_name">Имя</string>
    <string name="profile_label_rating">Рейтинг</string>
    <string name="profile_label_respect">Уважение</string>
    <string name="profile_validate_error">Невалидный адрес репозитория</string>
    <string name="menu_search_title">Поиск</string>
    <string name="chats_archive_title">Архив чатов</string>
</resources>